# OCCT_VIEWER

./: .gitignore  README.md
src/: CMakeLists.txt  FileIO.cpp  FileIO.h  QtRenderWidget.cpp  QtRenderWidget.h  VtkHelper.cpp  VtkHelper.h  main.cpp
